fix minor typos

--- a/approach-2.tex
+++ b/approach-2.tex
@@ -80,7 +80,7 @@ where $e_{i} = y_{i} - \hat{y}_{i} $ which is the error between the actual value
 $\hat{\beta}_{1}$ is estimated by {\em least squares} and $\hat{\sigma}_{\beta_{1}}$ is the error of estimating $\beta_{1}$~\citep{GrIy94}. In this metric, the numerator is the absolute value of the trend slope and the denominator considers the fitness of the regression model which represents the deviation of the actual value from the regression model.
 When the context is clear, we also use $\mathcal{W}_\mathcal{T}$ or $\mathcal{W}_d$ to represent the change potential of a trend or a program element.
 
-\noindent\textbf{Rationale of Equation \ref{eq:trend_metric}:} We want to evolve the ranks of statements in a fast, monotonic way. In linear models, \textit{A fast changing monotonic trend should have a larger slope $\beta_1$ as well as a smaller deviation $\epsilon_i$ from the linear model.}
+\noindent\textbf{Rationale of Equation \ref{eq:trend_metric}:} We want to evolve the ranks of statements in a fast, monotonic way. In linear models, \textit{a fast changing monotonic trend should have a larger slope $\beta_1$ as well as a smaller deviation $\epsilon_i$ from the linear model.}
 %In linear models, fast changing monotonic model has a bigger slope and thus gets a bigger numerator. Meanwhile a stable and monotonic trend has a smaller deviation from the linear model and thus gets a smaller denominator.
 Using this metric in Equation 2 that uses the estimated slope in the numerator and the estimated deviation in the denominator, we may isolate trends that evolve in faster and more stable (less oscillation) ways. Table \ref{tab:trend_exp} shows a few sample trends and their change potentials according to Equation \ref{eq:trend_metric}.
 
@@ -108,7 +108,7 @@ Using this metric in Equation 2 that uses the estimated slope in the numerator a
 
 \subsection{Speed up the Rank Change Process}
 
-After evaluating the program elements according to their change potentials, \textsc{Dms} will try to speed up the evolution trend of the program elements based on the change potential ($\mathcal{W}_{\mathcal{T}}$). First, program elements with the same suspiciousness scores are grouped together, they are termed as {\em suspicious groups} in this paper.\footnote{We call such groups as {\em suspicious groups} since we emphasize the fact that they may contain potentially suspicious elements. Some other researchers \cite[e.g.][]{Alberto2011} call them {\em ambiguity groups} as that term emphasizes the fact the elements in the groups have the same but ambiguous suspiciousness scores.} These suspicious groups are then assigned change-potential scores based on the change potentials of their constituent program elements. When new test cases are added, based on the actual program elements that get executed, some groups can be broken into two. When this happens, the diversity of the suspiciousness scores increases in most cases. The goal of \textsc{Dms} is to select a new test case that breaks a group into two sub-groups where the overall change potentials are maximized.
+After evaluating the program elements according to their change potentials, \textsc{Dms} will try to speed up the evolution trend of the program elements based on the change potential ($\mathcal{W}_{\mathcal{T}}$). First, program elements with the same suspiciousness scores are grouped together, they are termed as {\em suspicious groups} in this paper.\footnote{We call such groups as {\em suspicious groups} since we simply want to state the fact that every group may contain potentially suspicious elements. Some other studies \cite[e.g.][]{Alberto2011} call them {\em ambiguity groups} as that term may emphasize more on the fact that the elements in the groups have the same but ambiguous suspiciousness scores.} These suspicious groups are then assigned change-potential scores based on the change potentials of their constituent program elements. When new test cases are added, based on the actual program elements that get executed, some groups can be broken into two. When this happens, the diversity of the suspiciousness scores increases in most cases. The goal of \textsc{Dms} is to select a new test case that breaks a group into two sub-groups where the overall change potentials are maximized.
 
 We calculate the potential of a group $g$ by summing up the potential of all program elements $d$ that
 belongs to $g$.
